--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,25 @@
 {
-  "version": 2,
   "builds": [
     {
-      "src": "server/index.ts",
+      "src": "dist/index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "client/**/*",
+      "src": "dist/**/*",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/index.ts"
+      "dest": "dist/index.js"
     },
     {
       "src": "/(.*)",
-      "dest": "client/$1",
+      "dest": "dist/$1",
       "headers": {
         "cache-control": "public, max-age=0, must-revalidate"
       }
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
